[package]
name = "mini_executor"
version = "2.0.0"
edition = "2024"
description = "The smallest, simplest Rust task executor using Tokio runtime"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hsa00000/mini_executor"
keywords = ["executor", "tokio", "async", "task", "batch"]
categories = ["asynchronous", "concurrency"]

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
rayon = "1.10.0"
tokio-rayon = "2.1.0"

[[example]]
name = "individual_task"
path = "examples/individual_task.rs"

[[example]]
name = "batch_logging"
path = "examples/batch_logging.rs"

[[example]]
name = "database_batch"
path = "examples/database_batch.rs"
